--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!-- Comment -->
 <!-- git will launch this file first -->
+<!-- '!' enter will fill html -->
 <!DOCTYPE html>
 <html>
     <body>
         <main>
-            <p>
+            <h1> About Me!</h1>
+            <p class = >
                 Hello World!
             </p>
+
+            <img src="/images/Profile_Pic.png/">
         </main>
     </body>
 </html>
+<!-- Go live (bottom right) good for testing without pushing-->
